--- a/Streamlit/requirements.txt
+++ b/Streamlit/requirements.txt
@@ -1,7 +1,6 @@
-streamlit>=1.28
-snowflake-snowpark-python>=0.9.0
-snowflake-connector-python>=2.8.0
-streamlit
-folium
-streamlit-folium
-plotly
+streamlit==1.25.0
+snowflake-connector-python==3.0.2
+snowflake-snowpark-python==0.7.0
+pyarrow==9.0.0
+pandas
+numpy
