--- a/Streamlit/requirements.txt
+++ b/Streamlit/requirements.txt
@@ -1,9 +1,2 @@
-pip==24.3.1
-setuptools>=65.5.0
-wheel
-streamlit==1.40.1
-snowflake-connector-python==2.8.0
-snowflake-snowpark-python==0.7.0
-pyarrow==9.0.0
-pandas
-numpy
+snowflake-snowpark-python
+pyarrow==10.0.1
