--- a/Streamlit/requirements.txt
+++ b/Streamlit/requirements.txt
@@ -1,9 +1,3 @@
-pip==24.3.1
-setuptools>=75.4.0
-wheel
-cmake
-build
-streamlit==1.40.1
-snowflake-connector-python==3.0.2
-snowflake-snowpark-python>=1.2.0  # Python 3.10에 호환되는 버전 확인
-pyarrow<10.1.0
+snowflake-connector-python
+snowflake-snowpark-python
+streamlit==1.31.1
